modified backend and frontend